@@ -1,5 +1,6 @@
 package com.pyshnyi.entities;
 
+import com.pyshnyi.entities.plants.RegularGrass;
 import lombok.SneakyThrows;
 import org.reflections.Reflections;
 import org.reflections.util.ConfigurationBuilder;
@@ -7,15 +8,12 @@ import org.reflections.util.FilterBuilder;
 import com.pyshnyi.annotation.Prop;
 import com.pyshnyi.entities.animals.herbivores.*;
 import com.pyshnyi.entities.animals.predators.*;
-import com.pyshnyi.entities.plants.Grass;
 
 import java.io.FileReader;
 import java.io.IOException;
 import java.lang.annotation.Annotation;
-import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class Factory {
     public static final String CURRENT_PATH = "com.pyshnyi.entities";
@@ -26,7 +24,7 @@ public class Factory {
     @SneakyThrows
     public void initEntitiesMap() {
         Properties properties = new Properties();
-        try (FileReader reader = new FileReader("src/com/pyshnyi/resource/animals-data.properties")) {
+        try (FileReader reader = new FileReader("src/com/pyshnyi/resource/entities-data.properties")) {
             properties.load(reader);
         } catch (IOException e) {
             e.printStackTrace();
@@ -37,23 +35,12 @@ public class Factory {
             var entityAnnotation = aClass.getAnnotation(com.pyshnyi.annotation.Entity.class);
             String entityName = entityAnnotation.className();
             System.out.println(entityName);
-            Class childClass = aClass.getSuperclass();
-            Class parentClass = childClass.getSuperclass();
-            Field[] parentClassField = parentClass.getDeclaredFields();
-            List<String> propertiesValues = new ArrayList<>();
-            for (Field field : parentClassField) {
-                if (field.isAnnotationPresent(Prop.class)) {
-                    Annotation propAnnotation = field.getAnnotation(Prop.class);
-                    String propertyName = ((Prop) propAnnotation).title();
-                    System.out.println(propertyName);
-                    propertiesValues.add(entityName + "." + propertyName);
-                }
-            }
+            List<String> propertiesValues = getStrings(aClass, entityName);
             var valuesToSearch = propertiesValues.stream()
                     .filter(el -> el.startsWith(entityName))
                     .sorted()
-                    .collect(Collectors.toList());
-            Constructor constructor = aClass.getDeclaredConstructor(Double.class, Integer.class, Integer.class, Double.class, String.class);
+                    .toList();
+            var constructor = aClass.getDeclaredConstructor(Double.class, Integer.class, Integer.class, Double.class, String.class);
             Double weight = Double.valueOf((String) properties.get(valuesToSearch.get(4)));
             Integer maxCount = Integer.valueOf((String) properties.get(valuesToSearch.get(1)));
             Integer speed = Integer.valueOf((String) properties.get(valuesToSearch.get(2)));
@@ -61,8 +48,24 @@ public class Factory {
             String unicode = String.valueOf(properties.get(valuesToSearch.get(3)));
             entitiesMap.put(aClass, constructor.newInstance(weight, maxCount, speed, kgToBeFull, unicode));
         }
-        System.out.println();
+        System.out.println(entitiesMap);
     }
+
+    private static List<String> getStrings(Class<?> aClass, String entityName) {
+        Class childClass = aClass.getSuperclass();
+        Class parentClass = childClass.getSuperclass();
+        Field[] parentClassField = parentClass.getDeclaredFields();
+        List<String> propertiesValues = new ArrayList<>();
+        for (Field field : parentClassField) {
+            if (field.isAnnotationPresent(Prop.class)) {
+                Annotation propAnnotation = field.getAnnotation(Prop.class);
+                String propertyName = ((Prop) propAnnotation).title();
+                propertiesValues.add(entityName + "." + propertyName);
+            }
+        }
+        return propertiesValues;
+    }
+
     public Entity createEntity(EntityType type) {
         return switch (type) {
             case BEAR -> (Bear) entitiesMap.get(Bear.class);
@@ -74,7 +77,7 @@ public class Factory {
             case EAGLE -> (Eagle) entitiesMap.get(Eagle.class);
             case FOX -> (Fox) entitiesMap.get(Fox.class);
             case GOAT -> (Goat) entitiesMap.get(Goat.class);
-            case GRASS -> (Grass) entitiesMap.get(Grass.class);
+            case REGULAR_GRASS -> (RegularGrass) entitiesMap.get(RegularGrass.class);
             case HORSE -> (Horse) entitiesMap.get(Horse.class);
             case MOUSE -> (Mouse) entitiesMap.get(Mouse.class);
             case RABBIT -> (Rabbit) entitiesMap.get(Rabbit.class);
